@@ -105,6 +105,9 @@ Optimizations
 * LUCENE-6458: Multi-term queries matching few terms per segment now execute
   like a disjunction. (Adrien Grand)
 
+* LUCENE-6360: TermsQuery rewrites to a disjunction when there are 16 matching
+  terms or less. (Adrien Grand)
+
 Bug Fixes
 * LUCENE-329: Fix FuzzyQuery defaults to rank exact matches highest.
   (Mark Harwood, Adrien Grand)
